<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="insert_expense">Insert Expense</string>
    <string name="category">Category</string>
    <string name="subcategory">Item Name</string>
    <string name="date">Date</string>
    <string name="submit_expense">Submit Expense</string>
    <string name="exit">Exit</string>
    <string name="cost">Cost</string>
    <string name="count">Count</string>
    <string name="insert_expense_success">Expense Inserted Successfully</string>
    <string name="insert_expense_failed">Error Inserting Expense</string>
    <string name="menu_expenses_viewer">Expenses</string>
    <string name="delete_expense">Delete Expense</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="filter_expenses">Filter Expenses</string>
    <string name="sort_by">Sort By</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="ascendingly">Ascendingly</string>
    <string name="descendingly">Descendingly</string>
    <string name="date_range">Date Range</string>
    <string name="specify_dates_range">Specify Dates Range</string>
    <string name="day">Day</string>
    <string name="month">MON</string>
    <string name="year">Year</string>
    <string name="category_image">Category Image</string>
    <string name="search_for_expense">Search for Expense</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="a_z">A-Z</string>
    <string name="z_a">Z-A</string>
    <string name="sort_by_category">Sort by Category</string>
    <string name="cash">Cash</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="pay_type">Pay Type</string>
    <string name="dashboard">Dashboard</string>
    <string name="backup_database">Backup Database</string>
    <string name="backup_success">Database is backed up successfully</string>
</resources>