<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_light_background"
    android:padding="10dp"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp"
    app:strokeColor="#5A5A5A"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="15dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/categoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subcategoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subcategory"
                android:textSize="16sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/costTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/failed"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/countTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/count"
                    android:textSize="16sp"
                    android:textAlignment="textEnd"
                    />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dateTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="12sp"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>